k8s/istio/jaeger-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: default
spec:
  hosts:
  - "jaeger.rezz.io"
  gateways:
  - istio-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
      weight: 100
