k8s/istio/prometheus-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  exportTo:
    - "."
  hosts:
  - "prometheus.rezz.io"
  gateways:
  - prometheus-gw
  tcp:
  - match:
      - port: 443
    route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
      weight: 100
